Adds markup to cars component, with ngIf to iterate of items and string interpolation to pull the data from the component file.

--- a/src/app/components/cars/cars.component.html
+++ b/src/app/components/cars/cars.component.html
@@ -1,1 +1,11 @@
-<p>cars works!</p>
+<div *ngIf="items?.length > 0;else noItems" class="container">
+  <ul *ngFor="let item of items" class="collection">
+    <li class="collection-item">{{item.image}}</li>
+    <li class="collection-item">{{item.manufacturer}}</li>
+    <li class="collection-item">{{item.model}}</li>
+  </ul>
+</div>
+<ng-template #noItems>
+  <hr>
+  <h5>There are no items to list</h5>
+</ng-template>
