--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,5 @@
-<p>navbar works!</p>
+<nav>
+  <div class="nav-wrapper black">
+    <a href="/" class="brand-logo left">Firestore Data App</a>
+  </div>
+</nav>
