--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <app-navbar></app-navbar>
 </div>
-<div class="container">
+<div class="container cars-content">
   <app-add-car></app-add-car>
   <app-cars></app-cars>
 </div>
