--- a/src/app/components/add-car/add-car.component.html
+++ b/src/app/components/add-car/add-car.component.html
@@ -1,6 +1,6 @@
-<div class="card">
+<div class="card add-car-form">
   <div class="card-content">
-    <span class="card-title"></span>
+    <span class="card-title">Please enter an image url, make and model of a car you want to add.</span>
     <form (ngSubmit)="onSubmit()" class="col s6">
       <div class="row">
         <div class="input-field col s6">
@@ -15,7 +15,7 @@
           <input type="text" [(ngModel)]="item.model" name="model">
           <label>Model</label>
         </div>
-        <input type="submit" value="Submit" class="btn">
+        <input type="submit" value="Add Car" class="btn waves-effect">
       </div>
     </form>
   </div>
