Adds class for styling.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <div class="nav-wrapper black">
+  <div class="nav-wrapper green lighten-2">
     <a href="/" class="brand-logo left">Firestore Data App</a>
   </div>
 </nav>
